# BevyShooter

./: .gitignore  Cargo.toml  build.rs  index.html
.cargo/: config.toml
src/: app.rs  main.rs
src/game/: assets.rs  background.rs  combat.rs  conditions.rs  core.rs  effects.rs  enemy.rs  mod.rs  player.rs  powerup.rs  shared.rs  state.rs  ui.rs
src/game/combat/: detect.rs  events.rs  mod.rs  resolve.rs  spatial.rs
src/game/enemy/: behavior.rs  components.rs  fire.rs  mod.rs  spawn.rs  visuals.rs
src/game/player/: components.rs  effects.rs  input.rs  mod.rs  shoot.rs
src/game/ui/: hud.rs  mod.rs  overlays.rs
src/platform/: mod.rs  native.rs  wasm.rs
