[package]
name = "bevy_shooter"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = []
# Enable bevy_log for development - explicitly use --features dev-logging
dev-logging = ["bevy/bevy_log"]

[dependencies]
fastrand = { version = "2.3", features = ["js"] }
smallvec = "1.15"

# Shared Bevy features for native and wasm builds.
[dependencies.bevy]
version = "0.18"
default-features = false
features = [
    # --- Core ---
    "std",
    "bevy_state",

    # --- Window / Winit ---
    "bevy_window",
    "bevy_winit",

    # --- Rendering / 2D ---
    "bevy_render",
    "bevy_core_pipeline",

    # --- Assets / Images ---
    "bevy_asset",
    "bevy_image",
    "webp",

    # --- Sprites ---
    "bevy_sprite",
    "bevy_sprite_render",

    # --- UI / Text ---
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "default_font",
]

# Native-only Bevy features.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.18", default-features = false, features = ["multi_threaded", "x11", "wayland"] }

# Wasm-only Bevy features and JS randomness support.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18", default-features = false, features = ["webgl2"] }
getrandom = { version = "0.4", features = ["wasm_js"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
strip = true

[profile.dev]
opt-level = 0
